# cpp-tooling

BasicProject01/: CMakeLists.txt  main.cpp  my_lib.cpp  my_lib.h
BasicProject02/: CMakeLists.txt
BasicProject02/app/: CMakeLists.txt
BasicProject02/src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
BasicProject03/: CMakeLists.txt
BasicProject03/app/: CMakeLists.txt
BasicProject03/inc/my_lib/: my_lib.h
ConfigureFile/: CMakeLists.txt  Makefile  README.md
ConfigureFile/app/: main.cpp
ConfigureFile/configured/: config.hpp.in
ConfigureFile/inc/my_lib/: CMakeLists.txt
ConfigureFile/src/my_lib/: CMakeLists.txt  my_lib.cpp
HelloWorld/: .gitignore  CMakeLists.txt  main.cpp
VariablesOptions/: CMakeLists.txt
VariablesOptions/app/: main.cpp
VariablesOptions/src/my_lib/: CMakeLists.txt  my_lib.cpp
